Fix scrollbar style with settingbar design bug.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -85,7 +85,7 @@ img {
 .setting {
     position: fixed;
     top: 0;
-    right: 0;
+    right: -10px;
 
     display: flex;
     flex-direction: column;
